--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -123,13 +123,6 @@ hr.site-hr {
 	}
 }
 
-.section-2 .img {
-	width: 100%;
-	height: 40%;
-	object-fit: cover;
-	border: 3px solid #d3c1b4;
-}
-
 .section-2 .content {
 	margin: 5% auto;
 	color: #e9e4e1;
@@ -137,6 +130,38 @@ hr.site-hr {
 
 .section-2 .heading-2 {
 	font-family: Ubuntu, sans-serif;
+}
+
+.section-2 .img {
+	width: 500px;
+	height: 500px;
+	margin: 0 auto;
+	display: block;
+	object-fit: cover;
+	border: 3px solid #d3c1b4;
+}
+
+/* On screens that are 992px wide or less, the background color is blue */
+@media screen and (max-width: 1200px) {
+	.section-2 .img {
+		width: 350px;
+		height: 350px;
+	}
+}
+
+@media screen and (max-width: 700px) {
+	.section-2 .img {
+		width: 300px;
+		height: 300px;
+	}
+}
+
+/* On screens that are 600px wide or less, the background color is olive */
+@media screen and (max-width: 500px) {
+	.section-2 .img {
+		width: 250px;
+		height: 250px;
+	}
 }
 
 /* section 3 */
@@ -156,6 +181,53 @@ hr.site-hr {
 
 .section-3 .param-3 {
 	text-align: justify;
+}
+
+/* section 4 */
+.section-4 {
+	margin: 0 auto;
+	padding: 5% 0;
+	background-color: #443027;
+	color: white;
+}
+
+.section-4 .img {
+	width: 350px;
+	height: 350px;
+	margin: 0 auto;
+	display: block;
+	object-fit: cover;
+	border: 3px solid #d3c1b4;
+}
+
+.section-4 .heading-4 {
+	font-family: Ubuntu, sans-serif;
+	text-align: center;
+}
+
+.section-4 a {
+	color: white;
+	text-decoration: none;
+}
+
+.section-4 a:hover {
+	color: #0099ff;
+}
+
+.section-4 .author {
+	font-size: 14px;
+	font-family: Ubuntu, sans-serif;
+	color: #b6b6b6;
+}
+
+.section-4 .author .username {
+	text-transform: capitalize;
+}
+
+.section-4 .para-4 {
+	padding: 2% 0;
+	text-align: justify;
+	margin: 2% auto;
 }
 
 /* footer */
