--- a/views/activity/index.ejs
+++ b/views/activity/index.ejs
@@ -133,6 +133,18 @@
                   </div>
                 <% }) %>
               <% } %>
+
+              <% if(page){%>
+                <div class="paginate d-flex flex-row justify-content-center my-3 my-lg-5">
+                  <% if(page > 1) { %>
+                    <a href="/activity?page=<%= parseInt(page,10) - 1 %>" class='btn btn-info rounded-0'>Back</a>
+                  <%}%>
+                  <% if(posts.length == 10) {%>
+                    <a href="/activity?page=<%= parseInt(page,10) + 1 %>" class='btn btn-primary rounded-0'>Next</a>
+                  <%}%>
+                </div>
+              <%}%>
+
             </div>
             
             <div class="col-12 col-lg-4 order-1 order-lg-2">
