--- a/views/tourist/attraction.ejs
+++ b/views/tourist/attraction.ejs
@@ -115,9 +115,9 @@
 
       <div class="section-1 container">
         <a id="myBtn" class= 'btn btn-primary' href='/tourist-attraction/new'>New Post</a>
-        <div class="row justify-content-center align-items-center">
-
-          <% if(posts){ %>
+        
+        <% if(posts){ %>
+          <div class="row justify-content-center align-items-center">
             <% posts.forEach(post=>{ %>
               <div class="col-12 col-md-6 col-lg-4 justify-content-center align-self-start mb-3">
                 <div class="card" style="width: 18rem;">
@@ -149,6 +149,19 @@
                 </div>
               </div>
             <% }); %>
+          </div>
+                
+          <% if(page){%>
+            <div class="paginate d-flex flex-row justify-content-center my-3 my-lg-5">
+              <% if(page > 1) { %>
+                <a href="/tourist-attraction/attraction?page=<%= parseInt(page,10) - 1 %>" class='btn btn-info rounded-0'>Back</a>
+              <%}%>
+              <% if(posts.length == 9) {%>
+                <a href="/tourist-attraction/attraction?page=<%= parseInt(page,10) + 1 %>" class='btn btn-primary rounded-0'>Next</a>
+              <%}%>
+            </div>
+          <%}%>
+          
           <% } else { %>
             <div class="notfound my-3 my-lg-5">
               <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594617816/images/frown_euqxwu.png" alt="frown" class='img1'>
@@ -156,7 +169,6 @@
             </div>
           <% } %>
           
-        </div>
       </div>
     </main>
 
