--- a/views/tourist/restaurant.ejs
+++ b/views/tourist/restaurant.ejs
@@ -145,10 +145,23 @@
                       <%}%>
                       <p class="card-text"><%= post.content.slice(0,150) %> ...</p>
                       <p class='category'><%= post.category %></p>
+                    </div>
                   </div>
                 </div>
+              <% }); %>
+                
+            </div>  
+            <% if(page){%>
+              <div class="paginate d-flex flex-row justify-content-center my-3 my-lg-5">
+                <% if(page > 1) { %>
+                  <a href="/tourist-attraction/attraction?page=<%= parseInt(page,10) - 1 %>" class='btn btn-info rounded-0'>Back</a>
+                <%}%>
+                <% if(posts.length == 9) {%>
+                  <a href="/tourist-attraction/attraction?page=<%= parseInt(page,10) + 1 %>" class='btn btn-primary rounded-0'>Next</a>
+                <%}%>
               </div>
-            <% }); %>
+            <%}%>
+
           <% } else { %>
             <div class="notfound my-3 my-lg-5">
               <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594617816/images/frown_euqxwu.png" alt="frown" class='img1'>
@@ -156,7 +169,6 @@
             </div>
           <% } %>
           
-        </div>
       </div>
     </main>
 
