--- a/views/activity/index.ejs
+++ b/views/activity/index.ejs
@@ -98,7 +98,51 @@
       <div class="section-1">
         <div class="container-fluid">
           <div class="row justify-content-center align-items-start">
-            <div class="col-12 col-lg-8 order-2 order-lg-1 activity" id='activity'>
+            <div class="col-12 col-lg-4 order-lg-2 order-lg-2">
+              <form class="form-inline justify-content-center my-3 my-lg-5" method="POST" action="/activity/search">
+                  <input class="form-control mr-sm-2 search-input" type="text" placeholder="Search" name='search'>
+                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              </form>
+  
+              <% if(random1 && random2) {%>
+                <div class="d-none d-lg-block">
+                  <div class="randomactivity pb-5">
+                      <h5>For you</h5>
+                      <div class="card my-3" style="width: 18rem;">
+                        <% if(random1.image) { %>
+                          <img src='data:image/<%= random1.image.contentType%>;base64,<%= random1.image.data.toString('base64')%>' class="card-img-top" alt="...">
+                        <% } else{ %>
+                          <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594617816/images/emptypic_ri9jxa.png" class="card-img-top" alt="images">
+                        <% } %>
+                        <div class="card-body">
+                          <a href="/activity/<%= random1._id %>"> <h5 class="card-title m-0"><%= random1.title %></h5></a>
+                          <% if(random1.author){ %>
+                            <p class='author'><em>Posted by <span class='username'><%= random1.author.username %></span></em></p>
+                          <%}%>
+                          <p class="card-text"><%= random1.content.slice(0,50) %> ...</p>
+                        </div>
+                      </div>
+  
+                      <div class="card my-3" style="width: 18rem;">
+                        <% if(random2.image) { %>
+                          <img src='data:image/<%= random2.image.contentType%>;base64,<%= random2.image.data.toString('base64')%>' class="card-img-top" alt="...">
+                        <% } else{ %>
+                          <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594617816/images/emptypic_ri9jxa.png" class="card-img-top" alt="images">
+                        <% } %>
+                        <div class="card-body">
+                          <a href="/activity/<%= random2._id %>"><h5 class="card-title m-0"><%= random2.title %></h5></a>
+                          <% if(random2.author){ %>
+                            <p class='author'><em>Posted by <span class='username'><%= random2.author.username %></span></em></p>
+                          <%}%>
+                          <p class="card-text"><%= random2.content.slice(0,50) %> ...</p>
+                        </div>
+                      </div>
+                  </div>
+                </div>
+              <% } %>
+            </div>
+            
+            <div class="col-12 col-lg-8 order-lg-1 activity" id='activity'>
 
               <% if(currentUser  && currentUser.isAdmin){ %>
               <a href='/activity/new' class='btn button mt-1 mt-lg-5'>New Post</a>
@@ -114,12 +158,12 @@
                     
                     <% if(post.author){ %>
                       <p class='author'><em>Posted by <span class='username'><%= post.author.username %></span></em></p>
-                    <%}%>
-
-                    <% if(post.image) { %>
-                      <img src="data:image/<%= post.image.contentType%>;base64,<%= post.image.data.toString('base64')%>" class="card-img-top" alt="images">
-                    <% } else{ %>
-                      <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594617816/images/emptypic_ri9jxa.png" class="card-img-top" alt="images">
+                      <%}%>
+                      
+                      <% if(post.image) { %>
+                        <img src="data:image/<%= post.image.contentType%>;base64,<%= post.image.data.toString('base64')%>" class="card-img-top" alt="images">
+                        <% } else{ %>
+                          <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594617816/images/emptypic_ri9jxa.png" class="card-img-top" alt="images">
                     <% } %>
 
                     <% if(post.content){ %>
@@ -147,49 +191,6 @@
 
             </div>
             
-            <div class="col-12 col-lg-4 order-1 order-lg-2">
-              <form class="form-inline justify-content-center my-3 my-lg-5" method="POST" action="/activity/search">
-                  <input class="form-control mr-sm-2 search-input" type="text" placeholder="Search" name='search'>
-                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-              </form>
-
-              <% if(random1 && random2) {%>
-                <div class="d-none d-lg-block">
-                  <div class="randomactivity pb-5">
-                      <h5>For you</h5>
-                      <div class="card my-3" style="width: 18rem;">
-                        <% if(random1.image) { %>
-                          <img src='data:image/<%= random1.image.contentType%>;base64,<%= random1.image.data.toString('base64')%>' class="card-img-top" alt="...">
-                        <% } else{ %>
-                          <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594617816/images/emptypic_ri9jxa.png" class="card-img-top" alt="images">
-                        <% } %>
-                        <div class="card-body">
-                          <a href="/activity/<%= random1._id %>"> <h5 class="card-title m-0"><%= random1.title %></h5></a>
-                          <% if(random1.author){ %>
-                            <p class='author'><em>Posted by <span class='username'><%= random1.author.username %></span></em></p>
-                          <%}%>
-                          <p class="card-text"><%= random1.content.slice(0,50) %> ...</p>
-                        </div>
-                      </div>
-
-                      <div class="card my-3" style="width: 18rem;">
-                        <% if(random2.image) { %>
-                          <img src='data:image/<%= random2.image.contentType%>;base64,<%= random2.image.data.toString('base64')%>' class="card-img-top" alt="...">
-                        <% } else{ %>
-                          <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594617816/images/emptypic_ri9jxa.png" class="card-img-top" alt="images">
-                        <% } %>
-                        <div class="card-body">
-                          <a href="/activity/<%= random2._id %>"><h5 class="card-title m-0"><%= random2.title %></h5></a>
-                          <% if(random2.author){ %>
-                            <p class='author'><em>Posted by <span class='username'><%= random2.author.username %></span></em></p>
-                          <%}%>
-                          <p class="card-text"><%= random2.content.slice(0,50) %> ...</p>
-                        </div>
-                      </div>
-                  </div>
-                </div>
-              <% } %>
-            </div>
           </div>
 
           <% if(!posts) { %>
